After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697915 - XI_BadDevice errors
XI_BadDevice errors
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: User Interface
HEAD
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
: 697531 697532 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-04-12 20:51 UTC by gQuigs
Modified: 2013-04-13 05:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Full bisect log (1.23 KB, application/octet-stream)
2013-04-12 21:16 UTC, gQuigs
Details
stacktrace (18.13 KB, application/octet-stream)
2013-04-12 21:35 UTC, gQuigs
Details

Description gQuigs 2013-04-12 20:51:11 UTC
I was trying to reproduce a crash in gst_encoding_target_get_profiles for transferring music to an iPod, instead I got a crash when I click on the "expand the iPod" arrow.

bryan@bryan-desktop:~/git/rhythmbox/shell/.libs$ ./lt-rhythmbox 

** (lt-rhythmbox:22330): CRITICAL **: itdb_splr_validate: assertion `at != ITDB_SPLAT_UNKNOWN' failed

(lt-rhythmbox:22330): Gdk-ERROR **: The program 'lt-rhythmbox' received an X Window System error.
This probably reflects a bug in the program.
The error was 'XI_BadDevice (invalid Device parameter)'.
  (Details: serial 16939 error_code 129 request_code 131 minor_code 40)

My first guess is this is not related to the crash I'm trying to report..
Comment 1 gQuigs 2013-04-12 21:16:35 UTC
Created attachment 241403 [details]
Full bisect log

f84a33d9bf6b73e95f2d5c9f0ef20caff03f55d0 is the first bad commit
commit f84a33d9bf6b73e95f2d5c9f0ef20caff03f55d0
Author: Jonathan Matthew <jonathan@d14n.org>
Date:   Sat Mar 30 10:37:48 2013 +1000

    don't disable multidevice
    
    clutter-gtk doesn't need it any more, and it stops touch input
    from working properly.
Comment 2 gQuigs 2013-04-12 21:35:41 UTC
Created attachment 241409 [details]
stacktrace
Comment 3 Jonathan Matthew 2013-04-12 22:19:36 UTC
If that's the commit that causes it, you have gtk problems. What version of gtk are you using and on which distro?
Comment 4 gQuigs 2013-04-12 23:04:49 UTC
Ubuntu Raring 13.04 with Gnome 3.8 Backports PPA.   GTK 3.7.12.  It actually crashes when to try collapse anything (Library, Playlists), so that should be pretty easy to verify that it's something wrong with my setup.
Comment 5 Jonathan Matthew 2013-04-12 23:34:16 UTC
*** Bug 697532 has been marked as a duplicate of this bug. ***
Comment 6 Jonathan Matthew 2013-04-12 23:46:09 UTC
*** Bug 697531 has been marked as a duplicate of this bug. ***
Comment 7 Jonathan Matthew 2013-04-13 01:39:01 UTC
(In reply to comment #4)
> Ubuntu Raring 13.04 with Gnome 3.8 Backports PPA.   GTK 3.7.12.  

Where can I find this PPA?
Comment 8 gQuigs 2013-04-13 01:47:39 UTC
The PPA is here:
https://launchpad.net/~gnome3-team/+archive/gnome3

Although I just build v2.97 on Ubuntu 12.04 (with stock GTK) and then removed the gdk_disable_multidevice () line and it crashes in the same place.

My thought was that it was due to mixing Xlib (still needed anyway?) and GDK as said here:
https://developer.gnome.org/gdk3/stable/GdkDeviceManager.html#gdk-disable-multidevice
Comment 9 Jonathan Matthew 2013-04-13 01:59:40 UTC
That call was only added to make event processing in the visualizer plugin work. Try disabling that if it's enabled?
Comment 10 Jonathan Matthew 2013-04-13 05:08:26 UTC
never mind, fixed in commit 7293b61