use gdk_event_get_device instead of gdk_event_get_source_device

We don't actually care about physical devices vs virtual devices,
we just want to know where the pointer was.  Now that we're using
XI2 (see commit f84a33d), requesting the physical device position
causes XI_BadDevice errors.

https://bugzilla.gnome.org/show_bug.cgi?id=697915