widgets/rb-cell-renderer-rating.c
@@ -304,7 +304,7 @@ rb_cell_renderer_rating_activate (GtkCellRenderer *cell,
 	g_return_val_if_fail (RB_IS_CELL_RENDERER_RATING (cellrating), FALSE);
 
 	gdk_window_get_device_position (gtk_widget_get_window (widget),
-					gdk_event_get_source_device (event),
+					gdk_event_get_device (event),
 					&mouse_x,
 					&mouse_y,
 					NULL);
